# ouxt_automation

./: .gitignore  404.html  Dockerfile  Fujioka_ga_Tukuri_mashita  Makefile  README.md  compose.yml  delete_container.sh  docker-compose.yml  hello.py  index.html  install_poetry.sh  license.html  packages.html  pyproject.toml  robotx_ws_docker.sh  setup.sh  setup_environment_variable.sh  setup_local.bash  setup_uav.sh  sitemap.xml  update.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: feature.md
.github/workflows/: ansible.yaml  build_firmware.yaml  build_scenario_test_image.yaml  check_workflow.yaml  deploy_workflow.yaml  docker-push.yaml  docker.yaml  docker_push.yaml  document.yaml  export_repos.yaml  generate_rosdep_yaml.yaml  integration_test.yaml  main.yml  robotx_setup.yml  scenario_test.yaml
.github/workflows/docker/mqtt_endpoint/mqtt_endpoint/: pyproject.toml
.github/workflows/docker/mqtt_endpoint/mqtt_endpoint/mqtt_endpoint/: generate.sh  ground_station.py  ground_station_heartbeat.py  ground_station_heartbeat_pb2.py  hardware_communication_msgs__HeartBeat_pb2.py  hardware_communication_msgs__MotorControl_pb2.py  joy_controller.py  main.py  motor_command.py  mqtt_endpoint.py  remote_control_test.py  test.py  udp_formwad.py
.github/workflows/docker/mqtt_endpoint/mqtt_endpoint/mqtt_endpoint/proto/: ground_station_heartbeat.proto  hardware_communication_msgs__HeartBeat.proto  hardware_communication_msgs__MotorControl.proto
ansible/: additional.repos  build_document.yml  core.repos  export_repos.yml  export_repos_full.yml  packages.repos  packages_exact.repos  setup_ansible.sh  setup_core.yml  setup_dataset.yml  setup_dev_container.yml  setup_dev_environment.yml  setup_docker.yml  setup_docker_testbench.yml  setup_endpoint.yml  setup_environment_variable.yml  setup_full.yml  setup_logger.yml  setup_mbed_workspace.yml  setup_ml_pipeline.yml  setup_perception_array.yml  setup_perception_array_mock.yml  setup_robot.yml  setup_uav.yml  start_dev_container.yml  update_full.yml
ansible/group_vars/: perception_camera.yml
ansible/host_vars/: 192.168.0.201.yml  192.168.0.202.yml  192.168.0.203.yml  192.168.0.204.yml  192.168.0.205.yml  192.168.0.206.yml
ansible/hosts/: docker.ini  hosts.ini  localhost.ini  robot.ini  (+1 more)
automation_pipeline/: index.html
circuits/: run_kibot.sh  start_kicad.sh
docker/: Dockerfile  compose.yml  create_container.sh  delete_container.sh  entrypoint.sh  run.sh
docker/mqtt_endpoint/mqtt_endpoint/: pyproject.toml
docker/mqtt_endpoint/mqtt_endpoint/mqtt_endpoint/: main.py
docs/: .gitignore  mkdocs.yml  requirements.txt
license/: index.html
ml_pipeline/: port_forward.sh  start_with_minikube.sh
operation_tools/: .gitignore  docker-compose.yaml  pyproject.toml
operation_tools/dags/: preprocess_rosbag.py
operation_tools/docker/: Dockerfile
operation_tools/operation_tools/cdk/: app.py  requirements.txt
operation_tools/operation_tools/cdk/docker/: Dockerfile
ouxt_automation/: generate_rosdep_yaml.py
report/: index.html
repository_manager/: .gitignore  check_ros_packages.py  get_github_action_results.py  get_issues.py  packages.yaml  report.py  requirements.txt
scripts/: check_workflow_deployment.py  generate_base_yaml.sh  generate_rosdep_yaml.py  overwrite_repos.py
search/: search_index.json
self_hosted_runner/: README.md  docker-compose.yaml  install_nvidia_docker.sh
the first take/: platformio.ini
tutorials/: build_document.html  build_instraction.html  navigation_demo.html  supported_platforms.html
workflow_templates/: BuildTest.yaml  UpdateWorkflowStatus.yaml
(+400 files in other folders)
