[tool.poetry]
name = "ouxt_automation"
version = "0.0.1"
description = "setup tools for OUXT Polaris package"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.10.12"
ansible = "2.9.8"
python-github = "^0.1.0.dev0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
fontawesome-markdown = "^0.2.6"
mkdocs-mermaid2-plugin = "^1.1.1"
pymdown-extensions = "^10.3.1"
plantuml-markdown = "^3.9.2"
python-markdown-math = "^0.8"
python-github-api = "^0.1.1"
mkdocs-github-dashboard = "^0.2.3"
pandas = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
