[project]
name = "ouxt-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fontawesome-markdown>=0.2.6",
    "markdown==3.3.0",
    "mkdocs>=1.5.3",
    "mkdocs-github-dashboard>=0.2.5",
    "mkdocs-material>=9.5.18",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "pandas>=2.2.3",
    "plantuml-markdown>=3.10.4",
    "pymdown-extensions>=10.4",
    "python-github-api>=0.1.1",
    "python-markdown-math>=0.8",
    "mkdocs-inline-select-svg-plugin>=0.1.0",
    "mkdocs-order-button>=0.1.0",
]
