[project]
name = "mqtt-endpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paho-mqtt>=2.1.0",
    "protobuf<=3.20",
    "pygame>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
endpoint = "mqtt_endpoint.mqtt_endpoint:run_main"
ground_station = "mqtt_endpoint.ground_station:main"
